# Intelligent_furnitures_control_app

./: README.md  build-profile.json5  log.txt  oh-package-lock.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5
entry/src/main/: module.json5  syscap.json
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/data/: RdbStorage.ets
entry/src/main/ets/entryability/: EntryAbility.ets  HttpFuntion.ets  LocalStorage.ets  RdbStorage.ets
entry/src/main/ets/pages/: Index.ets  Open.ets  OpenAI_Page.ets  Register.ets  Search_device.ets  Search_devices.ets  analyze.ets  facePage.ets  face_cma.ets  get_furniture.ets  scan_devices.ets  scene_page.ets  test_Page.ets  try.ets
entry/src/main/ets/tool/: IoTad.ets  TCP.ets  UDP.ets  classes.ets  component.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
hvigor/: hvigor-config.json5
